[package]
name = "chrono-craft-engine"
version = "0.0.1"
edition = "2021"
description = "an eventsource implementation on top of eventstore"
repository = "https://github.com/ChronoCraftEngine/chrono-craft-engine"
license-file = "LICENSE"
keywords = ["eventsource", "eventsourcing", "eventstore"]
categories = ["database"]

[dependencies]
async-trait = "0.1"
eventstore = "2.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1", features = ["v4", "serde"] }
tokio = "1.26"
thiserror = "1.0"
chrono-craft-engine-derive = { version = "0.1.0", path = "chrono-craft-engine-derive" }
redis= { version = "0.24", features = ["tokio-rustls-comp"], optional = true }
chrono = "0.4.31"

[features]
cache-redis=["redis"]
default = ["cache-redis"]

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
