[workspace]
resolver = "2"
members = [
    "horfimbor-client-derive",
    "horfimbor-jwt",
    "horfimbor-eventsource",
    "horfimbor-eventsource-derive",
    "horfimbor-time"
]

[workspace.dependencies]
thiserror = "2.0"
uuid = { version = "1.20", features = ["v7", "v8", "serde"] }


[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "warn"
