[package]
name = "horfimbor-client-derive"
version = "0.1.0"
edition = "2024"
description = "derive macro for yew and custom-elements"
repository = "https://github.com/horfimbor/horfimbor-client-derive"
license-file = "LICENSE"
keywords = ["macro"]
categories = ["development-tools::procedural-macro-helpers"]

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }


[lib]
proc-macro = true

[lints]
workspace = true
