[package]
name = "horfimbor-eventsource-derive"
version = "0.1.7"
edition = "2024"
description = "derive macro for horfimbor-eventsource"
repository = "https://github.com/horfimbor/horfimbor-engine"
license-file = "LICENSE"
keywords = ["macro"]
categories = ["development-tools::procedural-macro-helpers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
convert_case="0.7"

[lib]
proc-macro = true

[lints]
workspace = true
