[package]
name = "horfimbor-eventsource-derive"
version = "0.1.9"
edition = "2024"
description = "derive macro for horfimbor-eventsource"
repository = "https://github.com/horfimbor/horfimbor-engine"
license-file = "LICENSE"
readme = "README.md"
keywords = ["macro", "derive", "eventsource", "eventsourcing"]
categories = ["development-tools::procedural-macro-helpers"]

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
convert_case="0.11"

[lib]
proc-macro = true

[lints]
workspace = true
