[package]
name = "horfimbor-eventsource"
version = "0.3.1"
edition = "2021"
description = "an eventsource implementation on top of eventstore"
repository = "https://github.com/horfimbor/horfimbor-engine"
license-file = "LICENSE"
keywords = ["eventsource", "eventsourcing", "eventstore"]
categories = ["database", "rust-patterns"]

[dependencies]
async-trait = "0.1"
eventstore = "4.0.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1", features = ["v7", "v8", "serde"] }
tokio = "1.26"
thiserror = { workspace = true }
horfimbor-eventsource-derive = { version = "0.1.6", path = "../horfimbor-eventsource-derive" }
redis= { version = "0.29", features = ["tokio-rustls-comp"], optional = true }
sha1 = "0.10"

[features]
cache-redis=["redis"]
default = ["cache-redis"]

[dev-dependencies]
lazy_static = "1.4"
rand = "0.9"

[lints]
workspace = true
