[package]
name = "horfimbor-eventsource"
version = "0.3.5"
edition = "2024"
description = "an eventsource implementation on top of eventstore"
repository = "https://github.com/horfimbor/horfimbor-engine"
license-file = "LICENSE"
keywords = ["eventsource", "eventsourcing", "eventstore", "kurrentdb"]
categories = ["database", "rust-patterns"]

[dependencies]
async-trait = "0.1"
kurrentdb = "1.0.0-alpha.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { workspace = true }
tokio = "1.49"
thiserror = { workspace = true }
horfimbor-eventsource-derive = { version = "0.1.8", path = "../horfimbor-eventsource-derive" }
sha1 = "0.10"

redis = { version = "1.0", features = ["tokio-rustls-comp"], optional = true }

[features]
cache-redis = ["redis"]
default = ["cache-redis"]

[dev-dependencies]
lazy_static = "1.5"
rand = "0.9"

[lints]
workspace = true
