[package]
name = "horfimbor-jwt"
version = "0.3.0"
edition = "2024"
description = "Jwt handler for the game engine Horfimbor"
repository = "https://github.com/horfimbor/horfimbor-engine"
license-file = "LICENSE"
readme = "README.md"
keywords = ["jwt", "authentication", "token", "rocket"]
categories = ["authentication"]

[dependencies]
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = { workspace = true }
horfimbor-eventsource = { version = "0.4.0", path = "../horfimbor-eventsource", optional = true }
horfimbor-client = { version = "0.1.0", path = "../horfimbor-client", optional = true }
base64 = {version = "0.22", optional = true}
uuid = { workspace = true }
rocket = {version = "0.5", optional = true}

[features]
default = []
server = ["horfimbor-eventsource", "rocket"]
client = ["horfimbor-client","base64", "serde_json"]


[lints]
workspace = true
