[package]
name = "horfimbor-time"
version = "0.2.1"
edition = "2021"
description = "Time calculator for the Horfimbor game"
repository = "https://github.com/horfimbor/horfimbor-time"
license-file = "LICENSE"
keywords = ["gamedev", "time"]
categories = ["game-development"]

[dependencies]
thiserror = { workspace = true }
chrono = "0.4"

[lints]
workspace = true
