[package]
name = "horfimbor-time"
version = "0.2.2"
edition = "2024"
description = "Time calculator for the Horfimbor game"
repository = "https://github.com/horfimbor/horfimbor-time"
license-file = "LICENSE"
keywords = ["gamedev", "time"]
categories = ["game-development"]

[dependencies]
thiserror = { workspace = true }
chrono = "0.4"

[lints]
workspace = true
