[package]
name = "horfimbor-time"
version = "0.3.0"
edition = "2024"
description = "Time calculator for the Horfimbor game"
repository = "https://github.com/horfimbor/horfimbor-engine"
license-file = "LICENSE"
readme = "README.md"
keywords = ["gamedev", "time", "game", "chrono"]
categories = ["game-development", "date-and-time"]

[dependencies]
thiserror = { workspace = true }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }


[lints]
workspace = true
